# evolutor

./: README.md  data_nag.npz  pyproject.toml
evolutor/: __init__.py  __main__.py  _constants.py  _converters.py  _evolution.py  _jit.py  _record.py
examples/: seconds.py  turns.py  with_sr.py
