[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evolutor"
version = "0.1.0"
description = "Dummy package for analytical IBS evolution"
readme = "README.md"
authors = [
    { name = "Felix Soubelet", email = "felix.soubelet@github.com" }
]
requires-python = ">=3.10"
dependencies = []

