[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "evolutor/__init__.py"

[project]
name = "evolutor"
description = "Dummy package for analytical IBS evolution"
readme = "README.md"
authors = [
    { name = "Felix Soubelet", email = "felix.soubelet@github.com" }
]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = []

